# corpus_statistics

./: README.md  component.py  newscratch.py  notes.md  pyproject.toml  scratch.py
src/corpus_statistics/: __init__.py  component.py  component_simple.py  dispersion_functions.py
tests/: test_corpus_statistics.py  test_simple.py
