[tool.poetry]
name = "corpus-statistics"
version = "0.1.0"
description = ""
authors = ["Peter Baumgartner <5107405+pmbaumgartner@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
spacy = "^3.2.2"
zarr = "^2.11.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
ipython = "^8.0.1"
datasets = "^1.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
